--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/vercel": "^6.1.4",
     "astro": "^4.1.2",
     "typescript": "^5.3.3"
   }
