--- a/package.json
+++ b/package.json
@@ -7,17 +7,26 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "migration-gen": "npx drizzle-kit generate:pg",
+    "migration-apply": "npx tsx src/data/migrate.ts"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.4",
+    "@vercel/postgres": "^0.7.2",
     "astro": "^4.1.2",
+    "dotenv": "^16.4.1",
+    "drizzle-orm": "^0.29.3",
+    "postgres": "^3.4.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/uuid": "^9.0.8",
+    "drizzle-kit": "^0.20.13"
   }
 }
